--- a/exploratory_analysis.ipynb
+++ b/exploratory_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,6 +535,253 @@
     "- Satisfaction Score: Score provided by the customer for their complaint resolution.\n",
     "- Card Type: type of card hold by the customer.\n",
     "- Points Earned: the points earned by the customer for using credit card."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10000 entries, 0 to 9999\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   RowNumber           10000 non-null  int64  \n",
+      " 1   CustomerId          10000 non-null  int64  \n",
+      " 2   Surname             10000 non-null  object \n",
+      " 3   CreditScore         10000 non-null  int64  \n",
+      " 4   Geography           10000 non-null  object \n",
+      " 5   Gender              10000 non-null  object \n",
+      " 6   Age                 10000 non-null  int64  \n",
+      " 7   Tenure              10000 non-null  int64  \n",
+      " 8   Balance             10000 non-null  float64\n",
+      " 9   NumOfProducts       10000 non-null  int64  \n",
+      " 10  HasCrCard           10000 non-null  int64  \n",
+      " 11  IsActiveMember      10000 non-null  int64  \n",
+      " 12  EstimatedSalary     10000 non-null  float64\n",
+      " 13  Exited              10000 non-null  int64  \n",
+      " 14  Complain            10000 non-null  int64  \n",
+      " 15  Satisfaction Score  10000 non-null  int64  \n",
+      " 16  Card Type           10000 non-null  object \n",
+      " 17  Point Earned        10000 non-null  int64  \n",
+      "dtypes: float64(2), int64(12), object(4)\n",
+      "memory usage: 1.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Getting the data types of all features (to ensure that the data types are correct) and checking for null values\n",
+    "\n",
+    "bank_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RowNumber             10000\n",
+       "CustomerId            10000\n",
+       "Surname                2932\n",
+       "CreditScore             460\n",
+       "Geography                 3\n",
+       "Gender                    2\n",
+       "Age                      70\n",
+       "Tenure                   11\n",
+       "Balance                6382\n",
+       "NumOfProducts             4\n",
+       "HasCrCard                 2\n",
+       "IsActiveMember            2\n",
+       "EstimatedSalary        9999\n",
+       "Exited                    2\n",
+       "Complain                  2\n",
+       "Satisfaction Score        5\n",
+       "Card Type                 4\n",
+       "Point Earned            785\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Finding redundant or categorical features\n",
+    "\n",
+    "bank_df.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CreditScore</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Tenure</th>\n",
+       "      <th>Balance</th>\n",
+       "      <th>NumOfProducts</th>\n",
+       "      <th>EstimatedSalary</th>\n",
+       "      <th>Satisfaction Score</th>\n",
+       "      <th>Point Earned</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>650.528800</td>\n",
+       "      <td>38.921800</td>\n",
+       "      <td>5.012800</td>\n",
+       "      <td>76485.889288</td>\n",
+       "      <td>1.530200</td>\n",
+       "      <td>100090.239881</td>\n",
+       "      <td>3.013800</td>\n",
+       "      <td>606.515100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>96.653299</td>\n",
+       "      <td>10.487806</td>\n",
+       "      <td>2.892174</td>\n",
+       "      <td>62397.405202</td>\n",
+       "      <td>0.581654</td>\n",
+       "      <td>57510.492818</td>\n",
+       "      <td>1.405919</td>\n",
+       "      <td>225.924839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>350.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>11.580000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>119.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>584.000000</td>\n",
+       "      <td>32.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>51002.110000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>410.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>652.000000</td>\n",
+       "      <td>37.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>97198.540000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>100193.915000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>605.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>718.000000</td>\n",
+       "      <td>44.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>127644.240000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>149388.247500</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>801.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>850.000000</td>\n",
+       "      <td>92.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>250898.090000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>199992.480000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        CreditScore           Age        Tenure        Balance  NumOfProducts  \\\n",
+       "count  10000.000000  10000.000000  10000.000000   10000.000000   10000.000000   \n",
+       "mean     650.528800     38.921800      5.012800   76485.889288       1.530200   \n",
+       "std       96.653299     10.487806      2.892174   62397.405202       0.581654   \n",
+       "min      350.000000     18.000000      0.000000       0.000000       1.000000   \n",
+       "25%      584.000000     32.000000      3.000000       0.000000       1.000000   \n",
+       "50%      652.000000     37.000000      5.000000   97198.540000       1.000000   \n",
+       "75%      718.000000     44.000000      7.000000  127644.240000       2.000000   \n",
+       "max      850.000000     92.000000     10.000000  250898.090000       4.000000   \n",
+       "\n",
+       "       EstimatedSalary  Satisfaction Score  Point Earned  \n",
+       "count     10000.000000        10000.000000  10000.000000  \n",
+       "mean     100090.239881            3.013800    606.515100  \n",
+       "std       57510.492818            1.405919    225.924839  \n",
+       "min          11.580000            1.000000    119.000000  \n",
+       "25%       51002.110000            2.000000    410.000000  \n",
+       "50%      100193.915000            3.000000    605.000000  \n",
+       "75%      149388.247500            4.000000    801.000000  \n",
+       "max      199992.480000            5.000000   1000.000000  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Getting the statistical summary of the dataset\n",
+    "# Dropping the columns that are not required for the analysis\n",
+    "\n",
+    "df = bank_df.drop(['RowNumber', 'CustomerId', 'HasCrCard', 'IsActiveMember', 'Exited', 'Complain'], axis=1)\n",
+    "df.describe(include=[np.number])"
    ]
   }
  ],
