a correction was made to the interpretation of a feature

--- a/exploratory_analysis.ipynb
+++ b/exploratory_analysis.ipynb
@@ -2024,6 +2024,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If the customer is still active, it means that the customer has given up on a product and not on the bank."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -2065,13 +2072,6 @@
     "\n",
     "display(churn_by_IsActiveMember['churn_count'])\n",
     "display(churn_by_IsActiveMember['churn_percentage'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "I don't know why a customer who has canceled their subscription is still active, but we'll see how this feature contributes to the model."
    ]
   },
   {
